Add/External user creation and store in Db with Laravel Helpers
